--- a/admin/src/pages/Add/Add.css
+++ b/admin/src/pages/Add/Add.css
@@ -1,12 +1,14 @@
 .add{
     width: calc(100% - 280px);
+    margin-left: 280px;
     padding: 40px 50px;
     color: #334155;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    min-height: calc(100vh - 70px);
+    min-height: 100vh;
+    overflow-y: auto;
 }
 .add > p:first-child {
     font-size: 32px;
@@ -185,7 +187,8 @@
 }
 @media (max-width: 900px) {
     .add {
-        width: 100%;
+        width: calc(100% - 80px);
+        margin-left: 80px;
         padding: 20px;
     }
     .add form {
